# snakemake-interface-report-plugins

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-please.yml  test.yml
snakemake_interface_report_plugins/: common.py  interfaces.py  reporter.py  settings.py
snakemake_interface_report_plugins/registry/: __init__.py  plugin.py
tests/: tests.py
