[tool.poetry]
name = "snakemake-interface-report-plugins"
version = "0.1.0"
description = "The interface for Snakemake report plugins."
authors = ["Johannes Koester <johannes.koester@uni-due.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.16.0"

[tool.poetry.dev-dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
coverage = "^7.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
